--- a/src/app/components/details/details.component.html
+++ b/src/app/components/details/details.component.html
@@ -2,7 +2,8 @@
   <div class="game-banner">
     <img
       class="game-banner-img"
-      src="https://cemhri.org/wp-content/uploads/2018/04/Home-Four-Banner-Background-Image.png"
+      src="{{ game.background_image }}"
+      alt="background image"
     />
   </div>
   <div class="game-content">
@@ -10,11 +11,12 @@
       <div class="game-header">
         <h1 class="game-header-title">{{ game.name }}</h1>
         <h2 class="game-header-release-date">
-          Release: {{ game.released }}
+          Release: {{ game.released | date }}
         </h2>
         <p class="game-header-genres">
-            <span *ngFor="let genre of game.genres; let last = last"
-            >{{ genre.name }}<span *ngIf="!last">, </span></span>
+          <span *ngFor="let genre of game.genres; let last = last"
+          >{{ genre.name }}<span *ngIf="!last">, </span></span
+        >
         </p>
         <div class="game-gauge">
           <mwl-gauge
@@ -25,13 +27,15 @@
             [value]="gameRating"
             [animated]="true"
             [color]="getColor"
-            [animationDuration]="2">
+            [animationDuration]="2"
+          >
           </mwl-gauge>
           <a
             class="game-gauge-label"
             target="_blank"
             href="{{ game.metacritic_url }}"
-          >Metacritic</a>
+            >Metacritic</a
+          >
         </div>
       </div>
       <app-game-tabs [game]="game"></app-game-tabs>
